Fix misaligned logo in payments box section when using Firefox (#20313)
Firefox incorrectly positions the WordPress logo when checking out with
free credits.

This seems to be because Firefox renders a `position: absolute` element
within a `display: flex` element as if it were not absolutely
positioned.

The workaround is to avoid the need for `position: absolute` by
introducing a wrapper `<div>`.

--- a/client/my-sites/checkout/checkout/style.scss
+++ b/client/my-sites/checkout/checkout/style.scss
@@ -457,36 +457,31 @@
 	// -----------------------------------
 	.credits-payment-box {
 		.payment-box-section {
+			align-items: center;
 			box-sizing: border-box;
-			min-height: 91px;
-			padding: 20px 20px 20px 80px;
-			position: relative;
 			display: flex;
-			flex-direction: column;
-			justify-content: center;
+			min-height: 91px;
+			padding: 20px 20px 20px 0;
 
 			&::before {
 				color: $blue-medium;
-				left: 10px;
-				position: absolute;
+				margin: 0 10px;
 				@include noticon( '\f205', 60px );
 				@include breakpoint( '>660px' ) {
-					left: 20px;
+					margin: 0 20px;
 				}
 			}
 
-			> h6 {
-				color: $blue-medium;
-				font-size: 18px;
-			}
+			.checkout__payment-box-section-content {
+				> h6 {
+					color: $blue-medium;
+					font-size: 18px;
+				}
 
-			> span {
-				color: darken( $gray, 10% );
-				font-size: 15px;
-			}
-
-			@include breakpoint( '>660px' ) {
-				padding-left: 100px;
+				> span {
+					color: darken( $gray, 10% );
+					font-size: 15px;
+				}
 			}
 		}
 	}
